--- a/assats/style.css
+++ b/assats/style.css
@@ -10,116 +10,29 @@
 }
 
 body{
-    background-color: #f6f7fb;
-    font-family: 'lato',sans-serif;
-  background-color: #333;
-  color: #222;
-    overflow-x: hidden;
+font-family: 'lato',sans-serif;
+display: flex;
+align-items: center;
+justify-content: center;
+height: 100vh;
+overflow: hidden;
+ 
     margin: 0;
 }
-.container{
-    text-align: center;
-    background-color: #fafafa;
-    transform-origin: top left;
-    /* max-width: 1200px; */
-    padding: 50px;
-    /* width: 100vh; */
-    min-height: 100vh;
-    transition: transform .5s linear;
-    margin: auto;
-}
-.show-nav{
-    transform: rotate(-20deg);
- }
- .content img{
-    width: 100%;
- }
- .circle_container{
-    position: fixed;
-    top: -100px;
-    left: -100px;
-
- }
- .circle{
-    background-color: #ff7979;
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
-    position: relative;
-    transition: transform 0.5s linear;
- }
- .container.show-nav .circle{
-    transform: rotate(-70deg);
-
- }
-.circle button{
-    cursor: pointer;
+.bg{
+    background: url(./images/bg.jpg) no-repeat center center/cover;
     position: absolute;
-    top: 50%;
+    top: -30px;
+    left: -30px;
+    width: calc(100vw + 60px);
+    height: calc(100vh + 60px);
+    z-index: -1;
+    filter: blur(0px);
+}
+.loading_text{
+    font-size: 50px;
+    color: #fff;
+    position: absolute;
     left: 50%;
-    height: 100px;
-    background: transparent;
-    border: 0 ;
-    font-size: 26px;
-    color: #fff;
+    top: 50%;
 }
-.circle button:focus{
-    outline: none;
-}
-.circle button#open{
-    left: 60%;
-}
-.circle button#close{
-    top: 60%;
-    transform: rotate(90deg);
-    transform-origin: top left;
-}
-.container.show-nav + nav li{
-    transform: translateX(0);
-    transition-delay: 0.3s;
-}
-nav{
-    position: fixed;
-    bottom: 40px;
-    left: 0;
-    z-index: 100;
-}
-nav ul{
-    list-style: none;
-    padding-left: 30px;
-}
-nav ul li{
-    text-transform: uppercase;
-    color: #fff;
-    margin: 40px 0;
-     transform: translateX(-100%);
-     transition: transform 0.4s ease-in;
-}
-nav ul li i{
-    font-size: 20px;
-    margin-right: 10px;
-}
-nav ul li + li{
-    margin-left: 12px;
-    transform: translateX(-150%);
-}
-nav ul li + li + li{
-    margin-left: 20px;
-    transform: translateX(-200%);
-}
-.content{
-    max-width: 1000px;
-    margin: 50px auto;
-
-}
-.content small{
-    color: #555;
-
-font-style: italic;
-}
-.content p{
-    color: #333;
-    line-height: 1.5;
-}
-
-
