--- a/assats/style.css
+++ b/assats/style.css
@@ -17,7 +17,7 @@ justify-content: center;
 height: 100vh;
 overflow: hidden;
  
-    margin: 0;
+    margin: 0 auto;
 }
 .bg{
     background: url(./images/bg.jpg) no-repeat center center/cover;
